# Ai-Agent-Gateway

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  GatewayServerPlan.md  README.md  SERVER_COMMANDS.md  docker-compose.yml
.claude/: settings.json
.claude/agents/: dashboard-engineer.md  db-engineer.md  docker-deployer.md  fastapi-developer.md  security-reviewer.md  streaming-engineer.md  test-engineer.md
.claude/commands/: dev-up.md  logs.md  migrate.md  new-migration.md  security-audit.md  test.md
app/: Dockerfile  Dockerfile.patch  Dockerfile.test  alembic.ini  pyproject.toml
app/migrations/: README  env.py
app/migrations/versions/: 0001_p2_auth.py  0002_p3_request_log.py  0003_pd_dashboard.py  0004_api_tokens_chat_id.py  0005_gateway_settings.py  0006_cache_pricing.py  0007_seed_admin.py  0008_token_model_scopes.py  0009_pgvector_embeddings.py
app/src/gateway/: __init__.py  billing.py  cli.py  config.py  credential_store.py  limits.py  logging_mw.py  logging_setup.py  main.py  middleware.py  ratelimit.py  truncate.py
app/src/gateway/auth/: __init__.py  deps.py  jwt.py  passwords.py  routes.py
app/src/gateway/dashboard/: __init__.py  auth.py  csrf.py  reports.py  routes.py  server_stats.py  vectordb.py
app/src/gateway/dashboard/static/: dashboard.css
app/src/gateway/dashboard/templates/: base.html  login.html  overview.html  server.html  settings.html
app/src/gateway/dashboard/templates/chats/: detail.html  list.html
app/src/gateway/dashboard/templates/logs/: detail.html  list.html
app/src/gateway/dashboard/templates/models/: form.html  list.html
app/src/gateway/dashboard/templates/partials/: flash.html  icons.html  nav.html  pagination.html
app/src/gateway/dashboard/templates/reports/: cost.html  errors.html  latency.html  users.html
app/src/gateway/dashboard/templates/users/: api_token_once.html  detail.html  list.html  new.html  tokens_once.html
app/src/gateway/dashboard/templates/vectordb/: form.html  import.html  import_preview.html  list.html  search.html  search_results.html
app/src/gateway/db/: __init__.py  models.py  session.py
app/src/gateway/routes/: __init__.py  _sse_parse.py  embeddings.py  health.py  messages.py  models.py  qdrant.py  tokens.py  usage.py  vectors.py
app/src/gateway/upstream/: __init__.py  openrouter.py  pgvector.py  qdrant.py
app/tests/: conftest.py  test_auth.py  test_billing.py  test_cost_cap.py  test_dashboard.py  test_embeddings.py  test_health.py  test_messages_stream.py  test_pgvector_unit.py  test_qdrant.py  test_ratelimit.py  test_request_size_limit.py  test_sse_parse.py  test_truncate.py  test_vectors.py
docs/: dashboard-claude-design-plan.md  qdrant-to-pgvector-migration.md
ops/: README.md  disk-alarm.cron  install-disk-alarm.sh
scripts/: dev-up.ps1
